--- a/templates/account.html
+++ b/templates/account.html
@@ -8,32 +8,27 @@
             <h1 class="text-center">Account</h1>
         </div>
         <div class="account-form bg-light col-md-8 offset-md-2">
-
-            
-
             <h4 class="text-center mt-2">
                 <i class="fa-solid fa-user"></i>
                 {{ user.username }}
             </h4>
-
-            <h5 class="text-center">
+            <h4 class="text-center">
                 <i class="fa-solid fa-at"></i>
                 {{ user.email }}
-            </h5>
+            </h4>
+            {% with reports.count as total_reports %}
+            <h4><i class="fa-solid fa-pen"></i> # of Reports:</i>
+                {{ total_reports }}
+            </h4>
+            {% endwith %}
         </div>
     </div>
 </div>
 
 <div class="container-fluid w-75 mb-4">
     <div class="row">
-        <div class="col-md-6 p-0">
+        <div class="col-md-8 p-0">
             <h2 class="p-0 mb-2">Your Reports:</h2>
-        </div>
-        <div class="col-2 p-0 mr-2 d-flex justify-content-end">
-            {% with reports.count as total_reports %}
-            <p class="text-muted m-0 p-2">{{ total_reports }}</p>
-            <h3><i class="fa-solid fa-pen"></i></h3>
-            {% endwith %}
         </div>
         <div class="col-md-4 pe-0 mb-2">
             <a href="#" class="btn btn-success w-100">
@@ -59,7 +54,9 @@
             </div>
             <!-- Title -->
             <div class="col-3 text-start">
-                <a href="{% url 'report_details' report.pk  %}"><h5>{{ report.title }}</h5></a>
+                <a href="{% url 'report_details' report.pk  %}">
+                    <h5>{{ report.title }}</h5>
+                </a>
                 <p>{{ report.activity_category|title }}</p>
             </div>
             <!-- Overall Conditions -->
