Update navbar for responsiveness

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <nav class="navbar navbar-expand-sm bg-light">
-        <div class="container-fluid">
+        <div class="container-fluid d-flex justify-content-center">
 
             <a class="navbar-brand d-flex" href="{% url 'home' %}">
                 <div class="d-flex align-content-center flex-wrap">
