--- a/templates/account.html
+++ b/templates/account.html
@@ -31,7 +31,7 @@
             <h2 class="p-0 mb-2">Your Reports:</h2>
         </div>
         <div class="col-md-4 pe-0 mb-2">
-            <a href="#" class="btn btn-success w-100">
+            <a href="{% url 'create_report' %}" class="btn btn-success w-100">
                 Create New Report
             </a>
         </div>
