--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <div id="head-btns" class="w-50 position-absolute translate-middle d-flex flex-column align-items-center">
             <a href="{% url 'reports' %}" class="w-50 btn btn-light border-3 border-dark opacity-75 mb-2">Condition Reports</a>
             {% if user.is_authenticated %}
-            <a href="#" class="w-50 btn btn-success">Create Report</a>
+            <a href="{% url 'create_report' %}" class="w-50 btn btn-success">Create New Report</a>
             {% else %}
             <a href="{% url 'account_signup' %}" id="head-sign-up-btn" class="w-50 btn btn-light">Sign-Up</a>
             {% endif %}
