--- a/templates/reports.html
+++ b/templates/reports.html
@@ -37,7 +37,7 @@
               </div>
         </div>
         <div class="col-3 text-end">
-            <button class="btn btn-success">Create Report</button>
+            <a href="{% url 'create_report' %}" class="btn btn-success">Create New Report</a>
         </div>
     </div>
 
