--- a/templates/reports.html
+++ b/templates/reports.html
@@ -37,7 +37,11 @@
               </div>
         </div>
         <div class="col-3 text-end">
-            <a href="{% url 'create_report' %}" class="btn btn-success">Create New Report</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'create_report' %}" class="btn btn-success">Create New Report</a>
+            {% else %}
+                <a href="{% url 'account_login' %}" class="btn btn-success">Login To Create Reports</a>
+            {% endif %}
         </div>
     </div>
 
