--- a/templates/create_report.html
+++ b/templates/create_report.html
@@ -2,24 +2,11 @@
 
 {% block content %}
 
-<!-- <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ report_form.as_p }}
-    <label for="{{ report_form.images.id_for_label }}">Upload Images:</label>
-    {{ report_form.images }}
-    <input type="file" name="images" multiple>
-    <input type="submit" value="Create Report">
-</form> -->
-
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ report_form.as_p }}
     <label for="{{ report_form.images.id_for_label }}">Upload Images:</label>
-    {{ report_form.images }}
-    <input type="file" name="images" multiple>
-    {% if error %}
-        <p class="error">{{ error }}</p>
-    {% endif %}
+    <input id="upload" type="file" name="images" multiple>
     <input type="submit" value="Create Report">
 </form>
 
