--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -66,22 +66,31 @@
                     <div class="col-6">
                         <div class="border rounded bg-light">
                             <p class="info-label text-muted">Goal Reached:</p>
-                            <p class="info-item">{{ report.goal_reached }}</p>
+                            <p class="info-item">
+                                &nbsp;
+                                {% if report.goal_reached == "yes" %}
+                                <i class="fa-solid fa-circle-check text-success"></i>
+                                {% else %}
+                                <i class="fa-solid fa-ban text-danger"></i>
+                                {% endif %}
+                                {{ report.goal_reached|title }}&nbsp;&nbsp;
+                            </p>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="border rounded bg-light">
-                            <p class="info-label text-muted"># in Group:</p>
+                            <p class="info-label text-muted mt-1"><i class="fa-solid fa-person-hiking fs-6">-</i><i class="fa-solid fa-person-hiking fs-6"></i> # in Group:</p>
                             <p class="info-item">{{ report.number_in_group }}</p>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="border rounded bg-light">
-                            <p class="info-label text-muted"># on Route:</p>
+                            
+                            <p class="info-label text-muted mt-1"><i class="fa-solid fa-people-group fs-6"></i> # on Route:</p>
                             <p class="info-item">{{report.number_on_route}}</p>
                         </div>
                     </div>
-                    {% if field_value %}
+                    {% if report.height_in_meters %}
                     <div class="col-6">
                         <div class="border rounded bg-light">
                             <p class="info-label text-muted">Summit Height (masl):</p>
@@ -89,7 +98,7 @@
                         </div>
                     </div>
                     {% endif %}
-                    {% if field_value %}
+                    {% if report.time_taken %}
                     <div class="col-6">
                         <div class="border rounded bg-light">
                             <p class="info-label text-muted">Time Taken (Speed Ascent):</p>
