Update report list view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -150,6 +150,17 @@ footer a {
 
 .img-thumbnail {
     width: 100px;
+    height: 100px;
+}
+
+.img-num {
+    place-self: flex-end;
+    margin: 0;
+}
+
+
+.report-list-title {
+    color: #2596be;
 }
 
 /* Overall_Conditions */
