Attempt to add multiple images to a report

--- a/templates/reports.html
+++ b/templates/reports.html
@@ -86,7 +86,7 @@
             <div class="col-3 text-start">
                 <h4 class="report-list-title mt-2 mb-2">{{ report.title }}</h4>
                 <p class="m-0">{{ report.activity_category|title }}</p>
-                <p class="mb-2">Goal Reached: 
+                <p class="mb-2">Goal achieved: 
                     {% if report.goal_reached == "yes" %}
                     <i class="fa-solid fa-circle-check text-success"></i>
                     {% else %}
