Attempt to load report images in edit view

--- a/templates/edit_report.html
+++ b/templates/edit_report.html
@@ -19,7 +19,53 @@
             <div class="col-md-12">
 
                 <div class="container text-start">
-                    {{ edit_form.as_p }}
+                    <div class="row g-2">
+                        <div class="col-8">
+                            {{ edit_form.title|as_crispy_field }}
+                        </div>
+                        <div class="col-4">
+                            {{ edit_form.goal_reached|as_crispy_field }}
+                        </div>
+                        <div class="col-6">
+                            {{ edit_form.start_date|as_crispy_field }}
+                        </div>
+                        <div class="col-6">
+                            {{ edit_form.end_date|as_crispy_field }}
+                        </div>
+                        <div class="col-4">
+                            {{ edit_form.overall_conditions|as_crispy_field }}
+                        </div>
+                        <div class="col-4">
+                            {{ edit_form.activity_category|as_crispy_field }}
+                        </div>
+                        <div class="col-4">
+                            {{ edit_form.height_in_meters|as_crispy_field }}
+                        </div>
+                        <div class="col-4">
+                            {{ edit_form.number_in_group|as_crispy_field }}
+                        </div>
+                        <div class="col-4">
+                            {{ edit_form.number_on_route|as_crispy_field }}
+                        </div>
+                        <div class="col-4">
+                            {{ edit_form.time_taken|as_crispy_field }}
+                        </div>
+                        <div class="col-12">
+                            {{ edit_form.description|as_crispy_field }}
+                        </div>
+                        <div class="col-6">
+                            <label for="upload"><i class="fa-solid fa-camera"></i> Uploaded Images:</label>
+                            <br>
+                            <!-- images need to loop and display an editable field -->
+                            {{ edit_form.images|as_crispy_field }}
+                        </div>
+                        <div class="col-6">
+                            {{ edit_form.gps_map_link|as_crispy_field }}
+                        </div>
+                        <!-- <div class="col-12 d-flex flex-row justify-content-center">
+                            <input class="btn btn-success" type="submit" value="Update Report">
+                        </div> -->
+                    </div>
                 </div>
             </div>
         </form>
@@ -28,51 +74,3 @@
 </div>
 
 {% endblock %}
-
-<!-- <div class="row g-2">
-                        <div class="col-8">
-                            {{ report_form.title|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.goal_reached|as_crispy_field }}
-                        </div>
-                        <div class="col-6">
-                            {{ report_form.start_date|as_crispy_field }}
-                        </div>
-                        <div class="col-6">
-                            {{ report_form.end_date|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.overall_conditions|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.activity_category|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.height_in_meters|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.number_in_group|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.number_on_route|as_crispy_field }}
-                        </div>
-                        <div class="col-4">
-                            {{ report_form.time_taken|as_crispy_field }}
-                        </div>
-                        <div class="col-12">
-                            {{ report_form.description|as_crispy_field }}
-                        </div>
-                        <div class="col-6">
-                            <label for="upload"><i class="fa-solid fa-camera"></i> Upload Images:</label>
-                            <br>
-                            <input class="btn" id="upload" type="file" name="images" multiple>
-                        </div>
-                        <div class="col-6">
-                            GPS
-                        </div>
-                        <div class="col-12 d-flex flex-row justify-content-center">
-                            <input class="btn btn-success" type="submit" value="Create Report">
-                        </div>
-                    </div>
-                 -->
